refactor(documentation section): tableHasConfig section style

--- a/public/src/css/index.scss
+++ b/public/src/css/index.scss
@@ -414,6 +414,8 @@ main {
             border-radius: 6px;
 
             .silverBox-document-has-config {
+                padding-top: 75px;
+                margin-top: -75px;
                 padding-left: 40px;
                 max-height: 100rem;
                 border-radius: 15px;
