fix(header title): unless centerContent is given, the title will not be centered

--- a/public/src/css/components/_header.scss
+++ b/public/src/css/components/_header.scss
@@ -26,9 +26,13 @@
 		gap: var(--silverBox-title-gap);
 
 		&.silverBox-title-has-icon {
-		    display: flex;
-			justify-content: var(--silverBox-title-justifyContent);
+			display: flex;
 			align-items: center;
+
+
+			&.silverBox-title-centred {
+				justify-content: var(--silverBox-title-justifyContent);
+			}
 		}
 
 	}
