fix(silverBox/titleAlretIcon): fix titleAlretIcon not being responsive

--- a/public/src/css/components/_icons.scss
+++ b/public/src/css/components/_icons.scss
@@ -18,6 +18,9 @@
     border-radius: var(--silverBox-custom-icon-border-radius);
 }
 
+.silverBox-default-icon{
+    min-width: 50px;
+}
 /* tick */
 .silverBox-tick-mark {
     position: relative;
